--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ docs:
         url: /docs/projects/small-projects/
  - title: Work Experience
    children:
-      - title: "CSMC/Concordia University
+      - title: "CSMC/Concordia University"
         url: /docs/work-experience/csmc/
       - title: "Keirton"
         url: /docs/work-experience/keirton/
